<resources>
    <string name="app_name">Chatter</string>
    <string name="loginText">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passwordText">Password</string>
    <string name="signInText">Sign In</string>
    <string name="signupText">Sign Up</string>
    <string name="signupPasswordText">Password</string>
    <string name="passwordAgainText">Again</string>
    <string name="signupEmailText">Email</string>
    <string name="profileSettingsText">Profile Settings</string>
    <string name="firstNameLabel">First name</string>
    <string name="lastNameText">Last Name</string>
    <string name="genderText">Gender</string>
    <string name="maleText">Male</string>
    <string name="birthDateText">Date of birth</string>
    <string name="saveProfileChangesText">Save profile changes</string>
</resources>
